Get basic docker configuration working.
Mostly just sketching. Getting a sense of how the SSH and telnet
features are going to fit in.

--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
     "private": true,
     "workspaces": [
         "packages/web-frontend"
-    ]
+    ],
+    "scripts": {
+        "docker-build": "docker-compose -f docker/docker-compose.base.yml build",
+        "docker-dev": "docker-compose -f docker/docker-compose.base.yml -f docker/docker-compose.dev.yml up"
+    }
 }
