--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
     "private": true,
-    "workspaces": [
-        "packages/web-frontend"
-    ],
+    "workspaces": ["packages/*"],
     "scripts": {
         "docker-build": "docker-compose -f docker/docker-compose.base.yml build",
         "docker-dev": "docker-compose -f docker/docker-compose.base.yml -f docker/docker-compose.dev.yml up"
