Have `tsc` create ES modules.
I didn't realize I was having it build CommonJS modules.

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "compilerOptions": {
         "skipLibCheck": true,
-        "module": "Node16",
-        "moduleResolution": "Node16",
-        "resolveJsonModule": true,
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "paths": {
             "@/*": [
                 "./src/*"
