Add skeleton ws-backend. Use vite-node.
I didn't notice that ts-node's support for esm executables is
lack-luster. I'm a little confused about what it's getting tripped on
and I swear I've used it before. But `vite-node` is performing very well
so I'm happy to switch over.

--- a/packages/ws-backend/package.json
+++ b/packages/ws-backend/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "@dice-sh/cli",
+    "name": "@dice-sh/ws-backend",
+    "private": true,
     "version": "0.1.0",
     "scripts": {
         "start": "vite-node ./src/main.ts",
         "build": "tsc"
     },
     "main": "./dist/main.js",
-    "dependencies": {
-        "commander": "^12.1.0"
-    },
     "devDependencies": {
+        "@types/ws": "^8.5.10",
         "typescript": "^5.4.5",
         "vite-node": "^1.6.0"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "ws": "^8.17.0"
+    }
 }
