--- a/packages/web-frontend/package.json
+++ b/packages/web-frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-frontend",
+    "name": "@dice-sh/web-frontend",
     "version": "0.1.0",
     "private": true,
     "scripts": {
