--- a/packages/web-frontend/package.json
+++ b/packages/web-frontend/package.json
@@ -1,30 +1,43 @@
 {
-    "name": "@dice-sh/web-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --port 16421",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint && prettier --list-different .",
-        "prettify": "prettier --write ."
-    },
-    "dependencies": {
-        "@dice-roller/rpg-dice-roller": "^5.5.0",
-        "@dice-sh/engine": "^0.1.0",
-        "next": "14.2.3",
-        "prettier": "^3.2.5",
-        "react": "^18",
-        "react-dom": "^18",
-        "type-fest": "^4.18.3",
-        "usehooks-ts": "^3.1.0"
-    },
-    "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.3",
-        "typescript": "^5"
-    }
+  "name": "@dice-sh/web-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --port 16421",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint && prettier --list-different .",
+    "prettify": "prettier --write .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@dice-roller/rpg-dice-roller": "^5.5.0",
+    "@dice-sh/engine": "^0.1.0",
+    "next": "14.2.3",
+    "prettier": "^3.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "type-fest": "^4.18.3",
+    "usehooks-ts": "^3.1.0"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.9",
+    "@storybook/addon-interactions": "^8.1.9",
+    "@storybook/addon-links": "^8.1.9",
+    "@storybook/addon-onboarding": "^8.1.9",
+    "@storybook/blocks": "^8.1.9",
+    "@storybook/nextjs": "^8.1.9",
+    "@storybook/react": "^8.1.9",
+    "@storybook/test": "^8.1.9",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "^0.8.0",
+    "storybook": "^8.1.9",
+    "typescript": "^5"
+  }
 }
