Move prettier config to its own package.

--- a/packages/web-frontend/package.json
+++ b/packages/web-frontend/package.json
@@ -41,5 +41,6 @@
         "eslint-plugin-storybook": "^0.8.0",
         "storybook": "^8.1.9",
         "typescript": "^5"
-    }
+    },
+    "prettier": "@dice-sh/prettier-config"
 }
