--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -2,7 +2,9 @@
     "name": "@dice-sh/engine",
     "version": "0.1.0",
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "tsc --noEmit && prettier --list-different .",
+        "prettify": "prettier --write ."
     },
     "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -11,8 +13,10 @@
         "commander": "^12.1.0"
     },
     "devDependencies": {
+        "prettier": "^3.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
     },
+    "prettier": "@dice-sh/prettier-config",
     "type": "module"
 }
