--- a/packages/engine/tsconfig.json
+++ b/packages/engine/tsconfig.json
@@ -4,16 +4,12 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         },
         "outDir": "./dist",
         "sourceMap": true,
         "declaration": true,
         "declarationMap": true
     },
-    "include": [
-        "src/**/*.ts",
-    ],
+    "include": ["src/**/*.ts"]
 }
