--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,15 +3,19 @@
     "version": "0.1.0",
     "scripts": {
         "start": "vite-node ./src/main.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "tsc --noEmit && prettier --list-different .",
+        "prettify": "prettier --write ."
     },
     "main": "./dist/main.js",
     "dependencies": {
         "commander": "^12.1.0"
     },
     "devDependencies": {
+        "prettier": "^3.3.2",
         "typescript": "^5.4.5",
         "vite-node": "^1.6.0"
     },
+    "prettier": "@dice-sh/prettier-config",
     "type": "module"
 }
