--- a/packages/ws-backend/package.json
+++ b/packages/ws-backend/package.json
@@ -4,16 +4,20 @@
     "version": "0.1.0",
     "scripts": {
         "start": "vite-node ./src/main.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "tsc --noEmit && prettier --list-different .",
+        "prettify": "prettier --write ."
     },
     "main": "./dist/main.js",
     "devDependencies": {
         "@types/ws": "^8.5.10",
+        "prettier": "^3.3.2",
         "typescript": "^5.4.5",
         "vite-node": "^1.6.0"
     },
     "type": "module",
     "dependencies": {
         "ws": "^8.17.0"
-    }
+    },
+    "prettier": "@dice-sh/prettier-config"
 }
