--- a/packages/ws-backend/tsconfig.json
+++ b/packages/ws-backend/tsconfig.json
@@ -4,13 +4,9 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         },
         "outDir": "./dist"
     },
-    "include": [
-        "src/**/*.ts",
-    ],
+    "include": ["src/**/*.ts"]
 }
