--- a/packages/web-frontend/package.json
+++ b/packages/web-frontend/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev --port 16421",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint && prettier --list-different .",
+        "lint": "eslint && prettier --list-different .",
         "prettify": "prettier --write .",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build"
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.5.0",
+        "@dice-sh/eslint-config": "^1.0.0",
         "@storybook/addon-essentials": "^8.1.9",
         "@storybook/addon-interactions": "^8.1.9",
         "@storybook/addon-links": "^8.1.9",
