--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "scripts": {
         "build": "tsc",
-        "lint": "tsc --noEmit && prettier --list-different .",
+        "lint": "tsc --noEmit && eslint && prettier --list-different .",
         "prettify": "prettier --write ."
     },
     "exports": "./dist/index.js",
@@ -13,6 +13,8 @@
         "commander": "^12.1.0"
     },
     "devDependencies": {
+        "@dice-sh/eslint-config": "^1.0.0",
+        "eslint": "^9.6.0",
         "prettier": "^3.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
