--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,11 +10,15 @@
     },
     "devDependencies": {
         "@eslint/compat": "^1.1.0",
+        "@eslint/js": "^9.6.0",
         "@next/eslint-plugin-next": "^14.2.4",
         "@types/eslint": "^8.56.10",
+        "@types/eslint__js": "^8.42.3",
         "@vercel/style-guide": "^6.0.0",
+        "eslint": "^9.6.0",
         "prettier": "^3.3.2",
-        "typescript": "^5.5.3"
+        "typescript": "^5.5.3",
+        "typescript-eslint": "^7.15.0"
     },
     "prettier": "@dice-sh/prettier-config"
 }
