Add eslint to cli.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "start": "vite-node ./src/main.ts",
         "build": "tsc",
-        "lint": "tsc --noEmit && prettier --list-different .",
+        "lint": "tsc --noEmit && eslint && prettier --list-different .",
         "prettify": "prettier --write ."
     },
     "main": "./dist/main.js",
@@ -12,6 +12,7 @@
         "commander": "^12.1.0"
     },
     "devDependencies": {
+        "eslint": "^9.6.0",
         "prettier": "^3.3.2",
         "typescript": "^5.4.5",
         "vite-node": "^1.6.0"
