Add top-level dev script.
It doesn't continually rebuild the frontend's dependencies, but it does
it once at least.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "docker-build": "docker-compose -f docker/docker-compose.base.yml build",
         "docker-dev": "docker-compose -f docker/docker-compose.base.yml -f docker/docker-compose.dev.yml up",
         "lint": "npm run lint --workspaces --if-present",
-        "prettify": "npm run prettify --workspaces --if-present"
+        "prettify": "npm run prettify --workspaces --if-present",
+        "dev": "npm run build -w packages/engine && npm run dev -w packages/web-frontend"
     }
 }
