Define the BaseRequest.
Start of a simple router: figure out who should handle the request by
its type. Then let the handler finish parsing the request.

--- a/packages/ws-backend/package.json
+++ b/packages/ws-backend/package.json
@@ -20,7 +20,8 @@
     "type": "module",
     "dependencies": {
         "winston": "^3.13.0",
-        "ws": "^8.17.0"
+        "ws": "^8.17.0",
+        "zod": "^3.23.8"
     },
     "prettier": "@dice-sh/prettier-config"
 }
