--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "docker-build": "docker-compose -f docker/docker-compose.base.yml build",
         "docker-dev": "docker-compose -f docker/docker-compose.base.yml -f docker/docker-compose.dev.yml up",
-        "lint": "npm run lint --workspaces --if-present",
+        "lint": "npm run build -w packages/eslint-config && npm run lint --workspaces --if-present",
         "prettify": "npm run prettify --workspaces --if-present",
         "dev": "npm run build -w packages/engine && npm run dev -w packages/web-frontend"
     }
