--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,6 +16,7 @@
         "@types/eslint__js": "^8.42.3",
         "@vercel/style-guide": "^6.0.0",
         "eslint": "^8.57.0",
+        "globals": "^15.8.0",
         "prettier": "^3.3.2",
         "typescript": "^5.5.3",
         "typescript-eslint": "^7.16.0"
