--- a/packages/ws-backend/tsconfig.json
+++ b/packages/ws-backend/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "skipLibCheck": true,
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "Preserve",
+        "esModuleInterop": true,
         "paths": {
             "@/*": ["./src/*"]
         },
