--- a/packages/ws-backend/package.json
+++ b/packages/ws-backend/package.json
@@ -7,7 +7,8 @@
         "build": "tsc",
         "lint": "tsc --noEmit && eslint && prettier --list-different .",
         "prettify": "prettier --write .",
-        "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest"
+        "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+        "dev": "nodemon"
     },
     "main": "./dist/main.js",
     "devDependencies": {
@@ -16,6 +17,7 @@
         "@types/ws": "^8.5.10",
         "eslint": "^9.6.0",
         "jest": "^29.7.0",
+        "nodemon": "^3.1.4",
         "prettier": "^3.3.2",
         "ts-jest": "^29.2.2",
         "typescript": "^5.4.5",
