--- a/packages/ws-backend/package.json
+++ b/packages/ws-backend/package.json
@@ -25,6 +25,7 @@
     },
     "type": "module",
     "dependencies": {
+        "@dice-sh/engine": "^0.1.0",
         "socket.io": "^4.7.5",
         "socket.io-client": "^4.7.5",
         "winston": "^3.13.0",
