--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,8 +15,9 @@
         "@types/eslint": "^8.56.10",
         "@types/eslint__js": "^8.42.3",
         "@vercel/style-guide": "^6.0.0",
-        "eslint": "^8.57.0",
+        "eslint": "^9.7.0",
         "eslint-plugin-react": "^7.34.4",
+        "eslint-plugin-unused-imports": "^4.0.0",
         "globals": "^15.8.0",
         "prettier": "^3.3.2",
         "typescript": "^5.5.3",
